<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="net.zyuiop.loupgarou.MainActivity">


    <EditText
            android:id="@+id/host"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/enter_host"/>


    <EditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_port"
            android:layout_below="@id/host"
    />

    <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_username"
            android:layout_below="@id/port"
    />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:onClick="connect"
            android:id="@+id/connect"
            android:layout_below="@id/username"
    />

</RelativeLayout>
